feat(build)!: consolidate `Builds`
- improve `Builds` (maven.home resolution, project path resolution)

- inject maven.home property configuration

- fix `BuildsIT` (dedicated test POM instead of real project reference,
  to avoid build conflicts)

BREAKING CHANGE: `mavenHome()` and `mavenExecutable()` throw
`IllegalStateException` instead of returning `null`, as those missing
properties represent an abnormal state (configuration is mandatory).